test/libyul/yulSyntaxTests/for_expr_invalid_4.yul
{
	for {} 1 {} 1
}
// ----
// ParserError 2314: (15-16='1'): Expected '{' but got 'Number'
